--- a/content/data/bav/setu-bav.mdx
+++ b/content/data/bav/setu-bav.mdx
@@ -1,6 +1,6 @@
 ---
-sidebar_title: SETU BAV
-page_title: Bank account verification using SETU BAV
+sidebar_title: Setu BAV
+page_title: Bank account verification using Setu BAV
 order: 2
 visible_in_sidebar: true
 ---
