--- a/content/data/bav/setu-bav/notifications.mdx
+++ b/content/data/bav/setu-bav/notifications.mdx
@@ -1,17 +1,18 @@
 ---
 sidebar_title: Notifications
-page_title: SETU BAV Notifications
+page_title: Setu BAV Notifications
 order: 2
 visible_in_sidebar: true
 ---
 
 ## Notifications
 
-Below is the summary of the notifications which need to be processed on your server by exposing an endpoint for Setu to send an HTTP POST request. These notifications are sent by Setu when the SETU BAV request is completed
+Below is the summary of the notifications which need to be processed on your server by exposing an endpoint for Setu to send an HTTP POST request. These notifications are sent by Setu when the Setu BAV request is completed
 
 <Callout type="tip">
     Please send back an HTTP 2xx status code if the request sent was processed
-    correctly to avoid receiving multiple notifications for the same event. Response body is ignored.
+    correctly to avoid receiving multiple notifications for the same event.
+    Response body is ignored.
 </Callout>
 <br />
 
@@ -19,7 +20,7 @@ This will help you understand the notification flow before you start to implemen
 
 ### Notification Samples
 
-Here’s a sample notification of a successful SETU BAV request, with the corresponding request `id` as well as the details of the account holder.
+Here’s a sample notification of a successful Setu BAV request, with the corresponding request `id` as well as the details of the account holder.
 
 <CodeBlockWithCopy language="json">
     {`{
@@ -77,7 +78,7 @@ Here’s a sample notification of a successful SETU BAV request, with the corres
 
 <hr class="tertiary" />
 
-Here is a sample notification of a failed SETU BAV request, with the corresponding request `id` as well as the reason for failure.
+Here is a sample notification of a failed Setu BAV request, with the corresponding request `id` as well as the reason for failure.
 
 <CodeBlockWithCopy language="json">
     {`
