Update x-product-instance ID in OKYC

--- a/content/data/okyc/quickstart.mdx
+++ b/content/data/okyc/quickstart.mdx
@@ -15,7 +15,7 @@ This is started once Setu’s Sales team has interacted with you and confirmed i
 
 ### Step 2 — Get API credentials
 
-Contact Setu to receive `x-client-id` and `x-client-secret` details. These credentials are required to make API calls on Sandbox or Prodution.
+Contact Setu to receive `x-client-id`, `x-client-secret` and `x-product-instance-id`. These credentials are required to make API calls on Sandbox or Prodution.
 
 <hr class="primary" />
 
@@ -26,32 +26,32 @@ Setu’s OKYC product allows you to choose between two integration methods.
 <hr class="tertiary" />
 
 <Row>
-  <Portion desktopSpan="half">
-    <h4>Pre-built screens</h4>
-    <p>
-      Simply redirect your customer to pre-built screens with carefully designed
-      UX, and collect Aadhaar details. Theme screens to match your brand. Look
-      at the{" "}
-      <a href="/data/okyc/pre-built-screens" target="_blank">
-        pre-built screens guide
-      </a>{" "}
-      to proceed.
-    </p>
-    <img
-      src="https://storage.googleapis.com/strapi-assets/latest/OKYC_flow_gif_2aa486fce6/OKYC_flow_gif_2aa486fce6.gif"
-      style={{ width: "200px" }}
-    />
-  </Portion>
-  <Portion desktopSpan="half">
-    <h4>API integration</h4>
-    <p>
-      Integrate directly with our APIs and build your own UI. Look at the{" "}
-      <a href="/data/okyc/api-integration" target="_blank">
-        API integration guide
-      </a>{" "}
-      to proceed.
-    </p>
-  </Portion>
+    <Portion desktopSpan="half">
+        <h4>Pre-built screens</h4>
+        <p>
+            Simply redirect your customer to pre-built screens with carefully
+            designed UX, and collect Aadhaar details. Theme screens to match
+            your brand. Look at the{" "}
+            <a href="/data/okyc/pre-built-screens" target="_blank">
+                pre-built screens guide
+            </a>{" "}
+            to proceed.
+        </p>
+        <img
+            src="https://storage.googleapis.com/strapi-assets/latest/OKYC_flow_gif_2aa486fce6/OKYC_flow_gif_2aa486fce6.gif"
+            style={{ width: "200px" }}
+        />
+    </Portion>
+    <Portion desktopSpan="half">
+        <h4>API integration</h4>
+        <p>
+            Integrate directly with our APIs and build your own UI. Look at the{" "}
+            <a href="/data/okyc/api-integration" target="_blank">
+                API integration guide
+            </a>{" "}
+            to proceed.
+        </p>
+    </Portion>
 </Row>
 
 <WasPageHelpful />
