--- a/content/data/account-aggregator/v1/fi-data-types.mdx
+++ b/content/data/account-aggregator/v1/fi-data-types.mdx
@@ -1972,4 +1972,247 @@ We're adding dynamic mock data for more realistic and exhaustive integration tes
   </details>
 </Card>
 
+<br />
+
+#### GST FI types
+
+<Card padding="nano" shape="rounded">
+  <details>
+    <summary>
+      <Text weight="600" marginBottom="none">
+        Goods and Services Tax (GST)
+      </Text>
+    </summary>
+    <CodeBlockWithCopy language="json">
+      {`{
+  "Account": {
+    "maskedGstinNumber": "maskedGstinNumber1",
+    "version": "1.0.0",
+    "linkedAccRef": "linkedAccRef1",
+    "type": "gstr1_3b",
+    "Profile": {
+      "BusinessDetails": {
+        "lgnm": "Anupam Mukherjee",
+        "apprvdt": "2017-09-30",
+        "iscmp": "Yes",
+        "dty": "Normal",
+        "sts": "Active",
+        "trdnm": "Packaging",
+        "CategoryList": {
+          "cat": [
+            "Suppliers making supplies referred to in clause (b) of paragraph 6 of Schedule II",
+            "Others"
+          ]
+        }
+      },
+      "PlaceofBusiness": {
+        "Address": {
+          "bno": "31/1",
+          "flno": "III",
+          "bnm": "Venu Building",
+          "st": "Krishna Reddy Layout",
+          "loc": "Phase-II",
+          "stcd": "Karnataka",
+          "dst": "Mysore",
+          "pncd": "560100",
+          "NatureOfBusinessList": {
+            "ntr": ["BONDED_WAREHOUSE", "FACTORY_OR_MANUFACTURING", "INPUT_SERVICE_DISTRIBUTOR"]
+          }
+        }
+      }
+    },
+    "Transactions": {
+      "strdt": "2023-01-01",
+      "endt": "2023-05-31",
+      "Gstr1Details": {
+        "gstr1": {
+          "ret_prd": "042021",
+          "dof": "01-JAN-2021",
+          "status": "PROCESSED",
+          "filingFrequency": "MONTHLY",
+          "b2b_dtls": {
+            "b2b": {
+              "ctin": "01AABCE2207R1Z5",
+              "inum": "S008400",
+              "idt": "24-11-2016",
+              "val": "729248.16",
+              "pos": "06",
+              "rchrg": "N",
+              "inv_typ": "R",
+              "opd": "2016-12",
+              "srctyp": "e-Invoice",
+              "irn": "897ADG56RTY78956HYUG90BNHHIJK453GFTD99845672FDHHHSHGFH4567FG56TR",
+              "irngendate": "24-12-2019",
+              "diff_percent": "0.65",
+              "itm_det": {
+                "itm": {
+                  "txval": "10000",
+                  "iamt": "325",
+                  "camt": "0",
+                  "samt": "0",
+                  "csamt": "10"
+                }
+              }
+            }
+          }
+        }
+      },
+      "Gstr3bDetails": {
+        "gstr3b": {
+          "ret_prd": "072016",
+          "dof": "01-JAN-2021",
+          "status": "PROCESSED",
+          "filingFrequency": "MONTHLY",
+          "sup_details": {
+            "osup_det": {
+              "txval": "250",
+              "iamt": "100",
+              "camt": "200",
+              "samt": "300",
+              "csamt": "400"
+            },
+            "osup_zero": {
+              "txval": "250",
+              "iamt": "100",
+              "csamt": "400"
+            },
+            "osup_nil_exmp": {
+              "txval": "250"
+            },
+            "isup_rev": {
+              "txval": "250",
+              "iamt": "100",
+              "camt": "200",
+              "samt": "300",
+              "csamt": "400"
+            },
+            "osup_nongst": {
+              "txval": "250"
+            }
+          },
+          "sup_inter": {
+            "unreg_details_list": {
+              "unreg_details": [
+                {
+                  "txval": "250",
+                  "iamt": "200",
+                  "pos": "07"
+                },
+                {
+                  "txval": "250",
+                  "iamt": "200",
+                  "pos": "07"
+                }
+              ]
+            },
+            "comp_details_list": {
+              "comp_details": [
+                {
+                  "txval": "250",
+                  "iamt": "200",
+                  "pos": "07"
+                },
+                {
+                  "txval": "250",
+                  "iamt": "200",
+                  "pos": "07"
+                }
+              ]
+            },
+            "uin_details_list": {
+              "uin_details": [
+                {
+                  "txval": "250",
+                  "iamt": "200",
+                  "pos": "07"
+                },
+                {
+                  "txval": "250",
+                  "iamt": "200",
+                  "pos": "07"
+                }
+              ]
+            }
+          },
+          "eco_dtls": {
+            "eco_sup": {
+              "txval": "250",
+              "iamt": "100",
+              "camt": "200",
+              "samt": "300",
+              "csamt": "400"
+            },
+            "eco_reg_sup": {
+              "txval": "250"
+            }
+          },
+          "itc_elg": {
+            "itc_avl_list": {
+              "itc_avl": [
+                {
+                  "type": "IMPG",
+                  "iamt": "136.53",
+                  "camt": "274",
+                  "samt": "162.99",
+                  "csamt": "103"
+                },
+                {
+                  "type": "ISRC",
+                  "iamt": "136.53",
+                  "camt": "274",
+                  "samt": "162.99",
+                  "csamt": "103"
+                }
+              ]
+            },
+            "itc_rev_list": {
+              "itc_rev": [
+                {
+                  "type": "RUL",
+                  "iamt": "136.53",
+                  "camt": "274",
+                  "samt": "162.99",
+                  "csamt": "103"
+                },
+                {
+                  "type": "OTH",
+                  "iamt": "136.53",
+                  "camt": "274",
+                  "samt": "162.99",
+                  "csamt": "103"
+                }
+              ]
+            },
+            "itc_net": {
+              "iamt": "136.53",
+              "camt": "274",
+              "samt": "162.99",
+              "csamt": "103"
+            }
+          },
+          "intr_ltfee": {
+            "intr_details_list": {
+              "intr_details": [
+                {
+                  "iamt": "136.53",
+                  "camt": "274",
+                  "samt": "162.99"
+                },
+                {
+                  "iamt": "136.53",
+                  "camt": "274",
+                  "samt": "162.99"
+                }
+              ]
+            }
+          }
+        }
+      }
+    }
+  }
+}`}
+    </CodeBlockWithCopy>
+  </details>
+</Card>
+
 <WasPageHelpful />
