AG-752 updating rohan endpoints to the prod from uat

--- a/content/data/account-aggregator/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/api-integration/consent-flow.mdx
@@ -23,9 +23,9 @@ Call this API to create a consent request. The details of the request will be pr
 
 <CodeBlockWithCopy language="json">
     {`POST /consents
-{ 
+{
   "consentDuration": {
-    "unit" : "MONTH", 
+    "unit" : "MONTH",
     "value": "4"
   },
   "vua":  "999999999@onemoney",
@@ -57,7 +57,7 @@ Call this API to create a consent request. The details of the request will be pr
                             <CodeBlockWithCopy language="json">
                                 {`{
     "id": "6d285134-c764-49ab-b32d-ead003161587",
-    "url": "https://fiu-uat.setu.co/v2/consents/webview/6d285134-c764-49ab-b32d-ead003161587",
+    "url": "https://fiu.setu.co/v2/consents/webview/6d285134-c764-49ab-b32d-ead003161587",
     "status": "PENDING",
     "detail": {
         "consentStart": "2023-04-10T05:36:43.011Z",
@@ -219,7 +219,7 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
                             <h5>Response</h5>
                             <CodeBlockWithCopy language="json">
                                 {`{
-    "url": "https://fiu-uat.setu.co/consents/v2/webview/e082b325-2692-47cd-88cf-875068df9051",
+    "url": "https://fiu.setu.co/consents/v2/webview/e082b325-2692-47cd-88cf-875068df9051",
     "status": "PENDING",
     "context": [],
     "vua": "999999999@onemoney",
@@ -236,7 +236,7 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
                             </p>
                             <CodeBlockWithCopy language="json">
                                 {`{
-    "url": "http://fiu-uat.setu.co/v2/consents/webview/73633c01-d14d-4dbb-8a82-d82e53df5920",
+    "url": "https://fiu.setu.co/v2/consents/webview/73633c01-d14d-4dbb-8a82-d82e53df5920",
     "status": "PENDING",
     "detail": {
         "purpose": {
