--- a/content/data/account-aggregator/v1/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/v1/api-integration/consent-flow.mdx
@@ -77,7 +77,7 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
         "DEPOSIT"
     ]
 },
-"context": 
+"context":
 [
   {
     "key": "accounttype",
@@ -101,7 +101,7 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
                             <CodeBlockWithCopy language="json">
   {`{
     "id": "60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
-    "url": "https://fiu-uat.setu.co/consents/webview/60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
+    "url": "https://fiu.setu.co/consents/webview/60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
     "status": "PENDING",
     "Detail": {
     "consentStart": "2022-01-06T06:23:51.832Z",
@@ -150,7 +150,7 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
         "DEPOSIT"
     ]
 },
-"context": 
+"context":
 [
   {
     "key": "accounttype",
@@ -178,10 +178,10 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
   "ver": "string"
 }`}
 </CodeBlockWithCopy>
-                           
+
                             <h5>Error codes</h5>
                             <p>A mapping of error codes and messages for the Create consent API</p>
-                            
+
                             <table>
   <tr>
     <th>
@@ -277,13 +277,13 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
                     label: <Badge type="success">SUCCESS</Badge>,
                     content: (
                         <>
-                            
-                            
+
+
                             <h5>Response</h5>
                             <CodeBlockWithCopy language="json">
   {`{
     "id": "60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
-    "url": "https://fiu-uat.setu.co/consents/webview/60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
+    "url": "https://fiu.setu.co/consents/webview/60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
     "status": "PENDING",
     "Detail": {
     "consentStart": "2022-01-06T06:23:51.832Z",
@@ -332,7 +332,7 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
         "DEPOSIT"
     ]
 },
-"context": 
+"context":
 [
   {
     "key": "accounttype",
@@ -350,8 +350,8 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
                     label: <Badge type="failure">FAIL</Badge>,
                     content: (
                         <>
-                            
-                            
+
+
                             <h5>Response</h5>
                             <CodeBlockWithCopy language="json">
 {`{
@@ -362,10 +362,10 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
   "ver": "string"
 }`}
 </CodeBlockWithCopy>
-                            
+
                             <h5>Error codes</h5>
                             <p>A mapping of error codes and messages</p>
-                            
+
                             <table>
   <tr>
     <th>
