Update quickstart pages for esign and gst

--- a/content/data/gst/quickstart.mdx
+++ b/content/data/gst/quickstart.mdx
@@ -54,284 +54,249 @@ While testing on Sandbox, you may use the following sample values—
 -   If you use any other values for `gstin`, you will get a inavlid gstin response.
 
 <Tabs
-    tabs={[
+      tabs={[
         {
-            key: "1",
-            label: "200",
-            content: (
-                <>
-                    <Text size="small" weight="600">
-                        Success valid GSTIN without additional address
-                    </Text>
-                    <Card padding="nano" shape="rounded" marginBottom="micro">
-                        <details>
-                            <summary>
-                                <Text
-                                    size="medium"
-                                    marginBottom="none"
-                                    paddingRight="medium"
-                                >
-                                    <Badge type="success">SUCCESS</Badge> Your
+          key: "1",
+          label: "200",
+          content: (
+            <>
+            <Text size="small" weight="600">Type 1 (open by default)</Text>
+            <Card padding="nano" shape="rounded" marginBottom="micro">
+  <details>
+    <summary>
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="success">SUCCESS</Badge> Your
                                     request has a valid <code>gstin</code> and
                                     Setu has processed your request
-                                    successfully.
-                                </Text>
-                            </summary>
-                            <hr className="tertiary" />
-                            <h5>Request</h5>
-                            <CodeBlockWithCopy language="json">
-                                {`POST /api/verify/gst 
+                                    successfully.</Text>
+    </summary>
+              <hr className="tertiary" />
+              <h5>Request</h5>
+              <CodeBlockWithCopy language="json">
+                {`POST /api/verify/gst 
  
 { 
-    "gstin": "27AAICB3918J1CT"
+    "gstin": "27AAICB3918J1CT" 
 } `}
-                            </CodeBlockWithCopy>
-                            <hr className="tertiary" />
-                            <h5>Response</h5>
-                            <p>You will get the following details—</p>
-                            <CodeBlockWithCopy language="json">
-                                {`{
-  "data":{
-    "address":{
-      "additional":[
-        
-      ],
-      "principle":{
-        "buildingName":"MESH COMPLEX",
-        "buildingNumber":"WAREHOUSE H",
-        "city":"",
-        "district":"Thane",
-        "floorNo":"SURVEY NO. 35/4, 36/2",
-        "latitude":"",
-        "location":"BHIWANDI",
-        "longitude":"",
-        "naturePlaceOfBusiness":"",
-        "pinCode":"421302",
-        "stateCode":"Maharashtra",
-        "street":"SARAVALI"
-      }
+              </CodeBlockWithCopy>
+              <hr className="tertiary" />
+              <h5>Response</h5>
+              <p>You will get the following details—</p>
+              <CodeBlockWithCopy language="json">
+                {`{
+    "data": {
+        "address": {
+            "additional": [],
+            "principle": {
+                "buildingName": "MESH COMPLEX",
+                "buildingNumber": "WAREHOUSE H",
+                "city": "",
+                "district": "Thane",
+                "floorNo": "SURVEY NO. 35/4, 36/2",
+                "latitude": "",
+                "location": "BHIWANDI",
+                "longitude": "",
+                "naturePlaceOfBusiness": "",
+                "pinCode": "421302",
+                "stateCode": "Maharashtra",
+                "street": "SARAVALI"
+            }
+        },
+        "company": {
+            "constitutionOfBusiness": "Private Limited Company",
+            "name": "XYZ SELLER SERVICES PRIVATE LIMITED",
+            "natureOfBusinessActivity": "",
+            "state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
+            "status": "Active",
+            "taxPayerType": "Tax Collector (Electronic Commerce Operator)",
+            "tradeName": "XYZ SELLER SERVICES PRIVATE LIMITED",
+            "type": "Private Limited Company"
+        },
+        "gst": {
+            "dateOfCancellation": "",
+            "id": "27AAICB3918J1CT",
+            "lastUpdatedDate": "",
+            "registrationDate": "12/10/2018"
+        },
+        "jurisdiction": {
+            "centre": "Commissionerate - BHIWANDI,Division - DIVISION IV,Range - RANGE-I (Jurisdictional Office)",
+            "centreCode": "VQ0401",
+            "state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
+            "stateCode": "MHCG1425"
+        }
     },
-    "company":{
-      "constitutionOfBusiness":"Private Limited Company",
-      "name":"XYZ SELLER SERVICES PRIVATE LIMITED",
-      "natureOfBusinessActivity":"",
-      "state":"State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
-      "status":"Active",
-      "taxPayerType":"Tax Collector (Electronic Commerce Operator)",
-      "tradeName":"XYZ SELLER SERVICES PRIVATE LIMITED",
-      "type":"Private Limited Company"
-    },
-    "gst":{
-      "dateOfCancellation":"",
-      "id":"27AAICB3918J1CT",
-      "lastUpdatedDate":"",
-      "registrationDate":"12/10/2018"
-    },
-    "jurisdiction":{
-      "centre":"Commissionerate - BHIWANDI,Division - DIVISION IV,Range - RANGE-I (Jurisdictional Office)",
-      "centreCode":"VQ0401",
-      "state":"State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
-      "stateCode":"MHCG1425"
-    }
-  },
-  "message":"",
-  "requestId":"e347e79b-dddc-49c1-b266-afb2c44843e8",
-  "verification":"success",
-  "traceId":"1-633f22e0-6eb8245d7043f93e1bf83604"
-}`}
-                            </CodeBlockWithCopy>
-                        </details>
-                    </Card>
-
-                    <Text size="small" weight="600">
-                        Success valid GSTIN with additional address
-                    </Text>
-                    <Card padding="nano" shape="rounded" marginBottom="micro">
-                        <details>
-                            <summary>
-                                <Text
-                                    size="medium"
-                                    marginBottom="none"
-                                    paddingRight="medium"
-                                >
-                                    <Badge type="success">SUCCESS</Badge> Setu
+    "message": "",
+    "requestId": "e347e79b-dddc-49c1-b266-afb2c44843e8",
+    "verification": "success",
+    "traceId": "1-633f22e0-6eb8245d7043f93e1bf83604"
+} `}
+              </CodeBlockWithCopy>
+              </details>
+              </Card>
+              
+              <Text size="small" weight="600">Success valid GSTIN with additional address</Text>
+              <Card padding="nano" shape="rounded" marginBottom="micro">
+  <details>
+    <summary>
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="success">SUCCESS</Badge> Setu
                                     has processed your request successfully, the{" "}
                                     <code>gstin</code> is valid and has
-                                    additional address.
-                                </Text>
-                            </summary>
-                            <hr className="tertiary" />
-                            <h5>Request</h5>
-                            <CodeBlockWithCopy language="json">
-                                {`POST /api/verify/gst
-
-{
-"gstin": "27AAICB3919J1CT"
+                                    additional address.</Text>
+    </summary>
+              <hr className="tertiary" />
+              <h5>Request</h5>
+              <CodeBlockWithCopy language="json">
+                {`POST /api/verify/gst 
+ 
+{ 
+    "gstin": "27AAICB3919J1CT"
 } `}
-                            </CodeBlockWithCopy>
-                            <hr className="tertiary" />
-                            <h5>Response</h5>
-                            <p>You will get the following details—</p>
-                            <CodeBlockWithCopy language="json">
-                                {`{
-"data":{
-"address":{
-"additional":[
-{
-"buildingName":"",
-"buildingNumber":"DOOR NO, 17",
-"city":"",
-"district":"Dakshina Kannada",
-"floorNo":"1ST FLOOR",
-"latitude":"",
-"location":"ONNAKATTE KULAI OF MANGALORE",
-"longitude":"",
-"naturePlaceOfBusiness":"Office / Sale Office",
-"pinCode":"575019",
-"stateCode":"Karnataka",
-"street":"XYZ COMPLEX OPP MAHILA MANDALA"
-}
-],
-"principle":{
-"buildingName":"MESH COMPLEX",
-"buildingNumber":"WAREHOUSE H",
-"city":"",
-"district":"Thane",
-"floorNo":"SURVEY NO. 35/4, 36/2",
-"latitude":"",
-"location":"BHIWANDI",
-"longitude":"",
-"naturePlaceOfBusiness":"",
-"pinCode":"421302",
-"stateCode":"Maharashtra",
-"street":"SARAVALI"
-}
-},
-"company":{
-"constitutionOfBusiness":"Private Limited Company",
-"name":"XYZ SELLER SERVICES PRIVATE LIMITED",
-"natureOfBusinessActivity":"",
-"state":"State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
-"status":"Active",
-"taxPayerType":"Tax Collector (Electronic Commerce Operator)",
-"tradeName":"XYZ SELLER SERVICES PRIVATE LIMITED",
-"type":"Private Limited Company"
-},
-"gst":{
-"dateOfCancellation":"",
-"id":"27AAICB3918J1CT",
-"lastUpdatedDate":"",
-"registrationDate":"12/10/2018"
-},
-"jurisdiction":{
-"centre":"Commissionerate - BHIWANDI,Division - DIVISION IV,Range - RANGE-I (Jurisdictional Office)",
-"centreCode":"VQ0401",
-"state":"State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
-"stateCode":"MHCG1425"
-}
-},
-"message":"",
-"requestId":"e347e79b-dddc-49c1-b266-afb2c44843e8",
-"verification":"success",
-"traceId":"1-633f22e0-6eb8245d7043f93e1bf83604"
-}`}
-</CodeBlockWithCopy>
-</details>
-</Card>
-
-                    <Text size="small" weight="600">
-                        Success invalid GSTIN
-                    </Text>
-                    <Card padding="nano" shape="rounded" marginBottom="micro">
-                        <details>
-                            <summary>
-                                <Text
-                                    size="medium"
-                                    marginBottom="none"
-                                    paddingRight="medium"
-                                >
-                                    <Badge type="success">SUCCESS</Badge> Setu
+              </CodeBlockWithCopy>
+              <hr className="tertiary" />
+              <h5>Response</h5>
+              <p>You will get the following details—</p>
+              <CodeBlockWithCopy language="json">
+                {`{
+    "data": {
+        "address": {
+            "additional": [
+                {
+                    "buildingName": "",
+                    "buildingNumber": "DOOR NO, 17",
+                    "city": "",
+                    "district": "Dakshina Kannada",
+                    "floorNo": "1ST FLOOR",
+                    "latitude": "",
+                    "location": "ONNAKATTE KULAI OF MANGALORE",
+                    "longitude": "",
+                    "naturePlaceOfBusiness": "Office / Sale Office",
+                    "pinCode": "575019",
+                    "stateCode": "Karnataka",
+                    "street": "XYZ COMPLEX OPP MAHILA MANDALA"
+                }
+            ],
+            "principle": {
+                "buildingName": "MESH COMPLEX",
+                "buildingNumber": "WAREHOUSE H",
+                "city": "",
+                "district": "Thane",
+                "floorNo": "SURVEY NO. 35/4, 36/2",
+                "latitude": "",
+                "location": "BHIWANDI",
+                "longitude": "",
+                "naturePlaceOfBusiness": "",
+                "pinCode": "421302",
+                "stateCode": "Maharashtra",
+                "street": "SARAVALI"
+            }
+        },
+        "company": {
+            "constitutionOfBusiness": "Private Limited Company",
+            "name": "XYZ SELLER SERVICES PRIVATE LIMITED",
+            "natureOfBusinessActivity": "",
+            "state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
+            "status": "Active",
+            "taxPayerType": "Tax Collector (Electronic Commerce Operator)",
+            "tradeName": "XYZ SELLER SERVICES PRIVATE LIMITED",
+            "type": "Private Limited Company"
+        },
+        "gst": {
+            "dateOfCancellation": "",
+            "id": "27AAICB3918J1CT",
+            "lastUpdatedDate": "",
+            "registrationDate": "12/10/2018"
+        },
+        "jurisdiction": {
+            "centre": "Commissionerate - BHIWANDI,Division - DIVISION IV,Range - RANGE-I (Jurisdictional Office)",
+            "centreCode": "VQ0401",
+            "state": "State - Maharashtra,Zone - Thane,Division - THANE CITY,Charge - BHIWANDI_701",
+            "stateCode": "MHCG1425"
+        }
+    },
+    "message": "",
+    "requestId": "e347e79b-dddc-49c1-b266-afb2c44843e8",
+    "verification": "success",
+    "traceId": "1-633f22e0-6eb8245d7043f93e1bf83604"
+} `}
+              </CodeBlockWithCopy>
+              </details>
+              </Card>
+              
+              <Text size="small" weight="600">Success invalid GSTIN</Text>
+              <Card padding="nano" shape="rounded">
+  <details>
+    <summary>
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="success">SUCCESS</Badge> Setu
                                     has processed your request successfully, but
                                     the request has an invalid{" "}
-                                    <code>gstin</code>
-                                </Text>
-                            </summary>
-                            <hr className="tertiary" />
-                            <h5>Request</h5>
-                            <CodeBlockWithCopy language="json">
-                                {`POST /api/verify/gst
-
-{
-"gstin": "27AAICA3918J1C"
+                                    <code>gstin</code></Text>
+    </summary>
+              <hr className="tertiary" />
+              <h5>Request</h5>
+              <CodeBlockWithCopy language="json">
+                {`POST /api/verify/gst
+ 
+{ 
+    "gstin": "27AAICA3918J1C" 
 } `}
-                            </CodeBlockWithCopy>
-                            <hr className="tertiary" />
-                            <h5>Response</h5>
-                            <p>You will get the following details—</p>
-                            <CodeBlockWithCopy language="json">
-                                {`{
-"data":{
-
-},
-"message":"Invalid GSTIN / UID",
-"requestId":"f8baadba-5f92-481c-9ce4-f5ba45af030b",
-"verification":"success",
-"traceId":"1-633c15e8-24825b38477426d4165bb6c2"
-}`}
-                            </CodeBlockWithCopy>
-                        </details>
-                    </Card>
-                </>
-            ),
+              </CodeBlockWithCopy>
+              <hr className="tertiary" />
+              <h5>Response</h5>
+              <p>You will get the following details—</p>
+              <CodeBlockWithCopy language="json">
+                {`{
+    "data": {},
+    "message": "Invalid GSTIN / UID",
+    "requestId": "f8baadba-5f92-481c-9ce4-f5ba45af030b",
+    "verification": "success",
+    "traceId": "1-633c15e8-24825b38477426d4165bb6c2"
+} `}
+              </CodeBlockWithCopy>
+              </details>
+              </Card>
+            </>
+          ),
         },
         {
-            key: "2",
-            label: "500",
-            content: (
-                <>
-                    <Card padding="nano" shape="rounded" marginBottom="micro">
-                        <details open>
-                            <summary>
-                                <Text
-                                    size="medium"
-                                    marginBottom="none"
-                                    paddingRight="medium"
-                                >
-                                    <Badge type="failure">ERROR</Badge> The
+          key: "2",
+          label: "500",
+          content: (
+            <>
+            <Card padding="nano" shape="rounded" marginBottom="micro">
+  <details>
+    <summary>
+                <Text size="medium" marginBottom="none" paddingRight="medium"><Badge type="failure">ERROR</Badge> The
                                     request failed due to an error at our
-                                    upstream provider.
-                                </Text>
-                            </summary>
-                            <hr className="tertiary" />
-                            <h5>Request</h5>
-                            <CodeBlockWithCopy language="json">
-                                {`POST /api/verify/gst
-
-{
-"gstin": "27AAICA3918J1C"
+                                    upstream provider.</Text>
+    </summary>
+              <hr className="tertiary" />
+              <h5>Request</h5>
+              <CodeBlockWithCopy language="json">
+                {`POST /api/verify/gst 
+ 
+{ 
+    "gstin": "27AAICA3918J1C" 
 } `}
-                            </CodeBlockWithCopy>
-                            <hr className="tertiary" />
-                            <h5>Response</h5>
-                            <p>You will get the following response—</p>
-                            <CodeBlockWithCopy language="json">
-                                {`{
-"error": {
-"code": "upstream_error_response",
-"detail": "error response from upstream.",
-"requestId": "006425cd-7ebe-452a-9c0b-64e4df512324",
-"traceId": "1-633c1b9c-0ab06611209a2b750b610d23"
-}
+              </CodeBlockWithCopy>
+              <hr className="tertiary" />
+              <h5>Response</h5>
+              <p>You will get the following details—</p>
+              <CodeBlockWithCopy language="json">
+                {`{
+    "error": {
+        "code": "upstream_error_response",
+        "detail": "error response from upstream.",
+        "requestId": "006425cd-7ebe-452a-9c0b-64e4df512324",
+        "traceId": "1-633c1b9c-0ab06611209a2b750b610d23"
+    }
 } `}
-</CodeBlockWithCopy>
-</details>
-</Card>
-</>
-),
-},
-]}
-
-> </Tabs>
+              </CodeBlockWithCopy>
+              </details>
+              </Card>
+            </>
+          ),
+        }
+      ]}
+    ></Tabs>
 
 <br />
 <WasPageHelpful />
