AG-752 added GST FI Type, updated token api endpoint to the prod one (#108)
* AG-752 added GST FI Type, updated token api endpoint to the prod one

* AG-752 updating rohan endpoints to the prod from uat

* Format MDX

---------

Co-authored-by: Aditya Gannavarapu <adityagannavarapu.67@gmail.com>

--- a/content/data/account-aggregator/v1/api-integration/consent-flow.mdx
+++ b/content/data/account-aggregator/v1/api-integration/consent-flow.mdx
@@ -101,7 +101,7 @@ Read up more about the the `Detail` object <a href="/data/account-aggregator/con
                             <CodeBlockWithCopy language="json">
   {`{
     "id": "60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
-    "url": "https://fiu-uat.setu.co/consents/webview/60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
+    "url": "https://fiu.setu.co/consents/webview/60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
     "status": "PENDING",
     "Detail": {
     "consentStart": "2022-01-06T06:23:51.832Z",
@@ -283,7 +283,7 @@ If the consent is approved, the Status in the response will be `ACTIVE`. After t
                             <CodeBlockWithCopy language="json">
   {`{
     "id": "60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
-    "url": "https://fiu-uat.setu.co/consents/webview/60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
+    "url": "https://fiu.setu.co/consents/webview/60c76fa3-601c-4b9d-ad30-d33c0ebcacf3",
     "status": "PENDING",
     "Detail": {
     "consentStart": "2022-01-06T06:23:51.832Z",
