Update flexi esign

--- a/content/data/esign/quickstart.mdx
+++ b/content/data/esign/quickstart.mdx
@@ -16,6 +16,9 @@ Here’s a quick run through of the APIs—
 3. **Get status of signature request**—Get details against a signature request by passing the signature request `id`.
 4. **Download document**—Download a signed document by passing the signature request `id`.
 
+If using <a href="/data/esign/flexi-esign">flexible esign</a>, you need to first upload the signing config and then the flow of API calls remains the same as above.
+Uploading signing config is a one time task, if config does not change.
+
 <Callout type="tip">
   You can also <strong>delete a signature request</strong>—if required—by
   passing the request
