Add auto fetch flow page for AA

--- a/content/data/account-aggregator/api-integration/data-apis.mdx
+++ b/content/data/account-aggregator/api-integration/data-apis.mdx
@@ -356,7 +356,7 @@ request.
         {
           "linkRefNumber": "b2329f47-0a6f-4131-adb5-9ef7b4c1ca6a",
           "maskedAccNumber": "XXXXXX4373",
-          "status": "FAILED",  // individual account FI status
+          "FIstatus": "FAILED",  // individual account FI status
           "data": null
         }
       ],
