Hide pre-built screens in Billpay

--- a/content/payments/billpay/pre-built-screens/custom-payment/android.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/android.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Android
 page_title: BBPS Billpay android integration for custom payment
 order: 3
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Android integration with your own payment gateway
