--- a/content/payments/billpay/pre-built-screens/custom-payment/website.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/website.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Website
 page_title: BBPS Billpay website integration for custom payment
 order: 2
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Web integration with your own payment gateway
