--- a/content/payments/billpay/pre-built-screens/quickstart/iOS.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/iOS.mdx
@@ -2,7 +2,7 @@
 sidebar_title: iOS
 page_title: BBPS Billpay iOS integration
 order: 3
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## iOS integration
