--- a/content/payments/billpay/pre-built-screens/custom-payment/iOS.mdx
+++ b/content/payments/billpay/pre-built-screens/custom-payment/iOS.mdx
@@ -2,7 +2,7 @@
 sidebar_title: iOS
 page_title: BBPS Billpay iOS integration for custom payment
 order: 4
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## iOS integration with your own payment gateway
