--- a/content/payments/billpay/pre-built-screens/quickstart/android.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/android.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Android
 page_title: BBPS Billpay Android integration
 order: 2
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Android integration
