--- a/content/payments/billpay/pre-built-screens/quickstart/cross-platform.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/cross-platform.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Cross platform
 page_title: BBPS Billpay cross platform integration
 order: 4
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Cross platform implementation
