--- a/content/payments/billpay/pre-built-screens/quickstart/website.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart/website.mdx
@@ -2,7 +2,7 @@
 sidebar_title: Website
 page_title: BBPS Billpay website
 order: 1
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## Website integration
