--- a/content/payments/billpay/pre-built-screens/user-events.mdx
+++ b/content/payments/billpay/pre-built-screens/user-events.mdx
@@ -2,7 +2,7 @@
 sidebar_title: User events
 page_title: BBPS Billpay user events
 order: 3
-visible_in_sidebar: true
+visible_in_sidebar: false
 ---
 
 ## User events
