--- a/content/data/bav/reverse-penny-drop/api-integration.mdx
+++ b/content/data/bav/reverse-penny-drop/api-integration.mdx
@@ -365,7 +365,7 @@ _Please note that `accountType` can be `BANK_ACCOUNT`, `PPI` or `UNKNOWN`_
 
 <hr className="tertiary" />
 
-_`bankAccountType` is a optional data field, you may not receive the value always. (Please contact with Setu team to know more about this feature.)_
+_`bankAccountType` is an optional data field, you may not receive the value always. (Please contact with Setu team to know more about this feature.)_
 _The value can be `SAVINGS`, `CURRENT`, `JOINT`, `NRO`, `NRE`_
 
 <hr className="tertiary" />
@@ -505,7 +505,7 @@ This is an optional API. This API lets you know the bank verification status.
     "status": "BAV_REVERSE_PENNY_DROP_PAYMENT_SUCCESSFUL", // or, BAV_REVERSE_PENNY_DROP_CREATED, BAV_REVERSE_PENNY_DROP_EXPIRED, BAV_REVERSE_PENNY_DROP_PAYMENT_FAILED
     "data": { // if status is BAV_REVERSE_PENNY_DROP_PAYMENT_SUCCESSFUL, otherwise null
         "accountType": "BANK_ACCOUNT",
-        "bankAccountType"   :  "SAVINGS" // Optional, can be null
+        "bankAccountType":  "SAVINGS" // Optional, can be null
         "bankAccountIfsc": "SBIN0000539",
         "bankAccountName": "Noresh",
         "bankAccountNumber": "9009120939129",
