--- a/content/data/okyc/aadhaar-redundancy/api-integration.mdx
+++ b/content/data/okyc/aadhaar-redundancy/api-integration.mdx
@@ -105,7 +105,7 @@ Call this API to fetch the details and status of the Aadhaar Verification reques
                             <hr className="tertiary" />
                             <h5>Response</h5>
                             <p>
-                                In case <code>status</code> is still pending.
+                                If <code>status</code> is pending.
                             </p>
                             <CodeBlockWithCopy language="json">
                                 {`{
@@ -201,6 +201,34 @@ Call this API to fetch the details and status of the Aadhaar Verification reques
         {
             "code": "internal_server_error", 
             "detail": "Something went wrong, please try again.", 
+            "traceId": "1-6540b2f5-7576e9986b0b59ac02f4f831"
+        }
+}`}
+                            </CodeBlockWithCopy>
+                        </>
+                    ),
+                },
+                {
+                    key: "4",
+                    label: "500",
+                    content: (
+                        <>
+                            <hr className="tertiary" />
+                            <h5>Request</h5>
+                            <CodeBlockWithCopy language="json">
+                                {`GET  /api/aadhaar/verify/:request_id`}
+                            </CodeBlockWithCopy>
+                            <hr className="tertiary" />
+                            <h5>Response</h5>
+                            <p>
+                                Upstream Service Error.
+                            </p>
+                            <CodeBlockWithCopy language="json">
+{`{
+    "error": 
+        {
+            "code": "upstream_server_error", 
+            "detail": "Upstream service failure", 
             "traceId": "1-6540b2f5-7576e9986b0b59ac02f4f831"
         }
 }`}
