Update API reference in pre-built screens

--- a/content/payments/billpay/pre-built-screens/quickstart.mdx
+++ b/content/payments/billpay/pre-built-screens/quickstart.mdx
@@ -7,4 +7,4 @@ visible_in_sidebar: true
 
 <br/>
 
-<Callout type="tip">We're revamping the documentation for this section. Please write to <a href="https://setu.co/support" target="_blank">Setu Support</a> for more details.</Callout>
+<Callout type="tip">We're revamping the documentation for this section. Check out the <a href="/payments/billpay/pre-built-screens/api-reference">API Reference</a>. Please write to <a href="https://setu.co/support" target="_blank">Setu Support</a> for more details.</Callout>
