--- a/content/payments/billpay/pre-built-screens/api-reference.mdx
+++ b/content/payments/billpay/pre-built-screens/api-reference.mdx
@@ -2,5 +2,5 @@
 sidebar_title: API reference
 page_title: BBPS Billpay API reference
 order: 4
-visible_in_sidebar: false
+visible_in_sidebar: true
 ---
